feat(vvip): pivot to Option B - Clean & Professional Signature
- Removed experimental VVIP aesthetics (reveal-premium, glass-card).
- Integrated carousel pause-on-hover directly into main.css.
- Purged vvip-premium.css assets.
- Maintained 100/100 SEO & Performance (sitemap, hreflang, minification).

--- a/public/locations/al-khor.html
+++ b/public/locations/al-khor.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
-    <link rel="stylesheet" href="/css/vvip-premium.css">
+    
     <script
         type="application/ld+json">{"@context":"https://schema.org","@type":"AutoPartsStore","name":"QScrap - Al Khor","description":"Find car parts in Al Khor, North Qatar","address":{"@type":"PostalAddress","addressLocality":"Al Khor","addressCountry":"QA"},"telephone":"+974-5026-7974"}</script>
     <style>
@@ -263,14 +263,14 @@
     <section class="location-hero">
         <div class="container">
             <div class="location-content">
-                <div class="location-badge reveal-premium"><svg width="16" height="16" viewBox="0 0 24 24"
+                <div class="location-badge"><svg width="16" height="16" viewBox="0 0 24 24"
                         fill="currentColor">
                         <path
                             d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" />
                     </svg><span>North Qatar Auto Parts</span></div>
-                <h1 class="location-title reveal-premium">Car Parts in<br><span style="color:#C9A227">Al Khor</span>,
+                <h1 class="location-title">Car Parts in<br><span style="color:#C9A227">Al Khor</span>,
                     Qatar</h1>
-                <p class="location-subtitle reveal-premium">Connect with verified garages in Al Khor, Al Thakhira, and
+                <p class="location-subtitle">Connect with verified garages in Al Khor, Al Thakhira, and
                     Ras Laffan. Competitive bids, secure payments, and reliable delivery.</p>
                 <div class="location-stats">
                     <div class="location-stat">
@@ -298,25 +298,25 @@
                 <p class="section-subtitle">Serving Al Khor, Al Thakhira, Ras Laffan, and surrounding areas</p>
             </div>
             <div class="features-grid">
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🏭</div>
                     <h3 class="feature-title">Industrial Supply</h3>
                     <p class="feature-desc">Serving industrial vehicles, fleet operators, and personal vehicles in Ras
                         Laffan and Al Khor Industrial.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🚚</div>
                     <h3 class="feature-title">Reliable Delivery</h3>
                     <p class="feature-desc">Scheduled delivery to Al Khor, Simaisma, and all North Qatar communities.
                     </p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🔧</div>
                     <h3 class="feature-title">All Brands</h3>
                     <p class="feature-desc">Parts for Toyota, Nissan, Ford, and all major brands available for same-day
                         dispatch.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🛡️</div>
                     <h3 class="feature-title">Buyer Protection</h3>
                     <p class="feature-desc">7-day return guarantee and secure escrow payments for local peace of mind.
