--- a/public/locations/al-wakra.html
+++ b/public/locations/al-wakra.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
-    <link rel="stylesheet" href="/css/vvip-premium.css">
+    
     <script
         type="application/ld+json">{"@context":"https://schema.org","@type":"AutoPartsStore","name":"QScrap - Al Wakra","description":"Find car parts in Al Wakra, Qatar","address":{"@type":"PostalAddress","addressLocality":"Al Wakra","addressCountry":"QA"},"telephone":"+974-5026-7974"}</script>
     <style>
@@ -263,14 +263,14 @@
     <section class="location-hero">
         <div class="container">
             <div class="location-content">
-                <div class="location-badge reveal-premium"><svg width="16" height="16" viewBox="0 0 24 24"
+                <div class="location-badge"><svg width="16" height="16" viewBox="0 0 24 24"
                         fill="currentColor">
                         <path
                             d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" />
                     </svg><span>Southern Doha Auto Parts</span></div>
-                <h1 class="location-title reveal-premium">Car Parts in<br><span style="color:#C9A227">Al Wakra</span>,
+                <h1 class="location-title">Car Parts in<br><span style="color:#C9A227">Al Wakra</span>,
                     Qatar</h1>
-                <p class="location-subtitle reveal-premium">Connect with verified garages in Al Wakra, Mesaieed, and Al
+                <p class="location-subtitle">Connect with verified garages in Al Wakra, Mesaieed, and Al
                     Wukair. Competitive bids, secure payments, and same-day delivery.</p>
                 <div class="location-stats">
                     <div class="location-stat">
@@ -298,24 +298,24 @@
                 <p class="section-subtitle">Fast, reliable car parts delivery to Al Wakra and surrounding areas</p>
             </div>
             <div class="features-grid">
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🚗</div>
                     <h3 class="feature-title">All Car Brands</h3>
                     <p class="feature-desc">Toyota, Nissan, Hyundai, BMW, Mercedes — parts for every make, available in
                         Wakra Industrial.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">⚡</div>
                     <h3 class="feature-title">Fast Delivery</h3>
                     <p class="feature-desc">Same-day delivery to Al Wakra, Al Wukair, and the Southern corridor.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">💰</div>
                     <h3 class="feature-title">Best Prices</h3>
                     <p class="feature-desc">Competitive bidding from multiple Southern garages ensures fair local
                         pricing.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🛡️</div>
                     <h3 class="feature-title">7-Day Guarantee</h3>
                     <p class="feature-desc">Return policy and secure escrow payments for Southern Doha customers.</p>
