--- a/public/locations/doha.html
+++ b/public/locations/doha.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
-    <link rel="stylesheet" href="/css/vvip-premium.css">
+    
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -309,16 +309,16 @@
     <section class="location-hero">
         <div class="container">
             <div class="location-content">
-                <div class="location-badge reveal-premium">
+                <div class="location-badge">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" />
                     </svg>
                     <span>Capital City Auto Parts</span>
                 </div>
-                <h1 class="location-title reveal-premium">Car Parts in<br><span style="color:#C9A227">Doha</span>, Qatar
+                <h1 class="location-title">Car Parts in<br><span style="color:#C9A227">Doha</span>, Qatar
                 </h1>
-                <p class="location-subtitle reveal-premium">Connect with 50+ verified garages in West Bay, Lusail, and
+                <p class="location-subtitle">Connect with 50+ verified garages in West Bay, Lusail, and
                     all Doha districts. Competitive bids, secure payments, and express delivery.</p>
 
                 <div class="location-stats">
@@ -350,25 +350,25 @@
             </div>
 
             <div class="features-grid">
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🏙️</div>
                     <h3 class="feature-title">Central Location</h3>
                     <p class="feature-desc">Doha's central hub means faster delivery to West Bay, Pearl, Lusail, and
                         Msheireb Downtown.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🔧</div>
                     <h3 class="feature-title">All Brands</h3>
                     <p class="feature-desc">From Toyota Land Cruiser to luxury BMW and Mercedes — find parts for every
                         make on Doha roads.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">⚡</div>
                     <h3 class="feature-title">Express Delivery</h3>
                     <p class="feature-desc">Same-day delivery across Doha. Orders before 4 PM typically dispatched
                         within 60 minutes.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🛡️</div>
                     <h3 class="feature-title">Buyer Protection</h3>
                     <p class="feature-desc">7-day return guarantee, secure escrow payments, and vetted Doha garages
