--- a/public/locations/industrial-area.html
+++ b/public/locations/industrial-area.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
-    <link rel="stylesheet" href="/css/vvip-premium.css">
+    
 
     <!-- Structured Data: LocalBusiness -->
     <script type="application/ld+json">
@@ -404,16 +404,16 @@
     <section class="location-hero">
         <div class="container">
             <div class="location-content">
-                <div class="location-badge reveal-premium">
+                <div class="location-badge">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" />
                     </svg>
                     <span>Qatar's Auto Parts Hub</span>
                 </div>
-                <h1 class="location-title reveal-premium">Car Parts in<br><span style="color:var(--gold)">Industrial
+                <h1 class="location-title">Car Parts in<br><span style="color:var(--gold)">Industrial
                         Area</span>, Doha</h1>
-                <p class="location-subtitle reveal-premium">Connect with 50+ verified garages and scrapyards in the Doha
+                <p class="location-subtitle">Connect with 50+ verified garages and scrapyards in the Doha
                     Industrial Area heart. Same-day delivery, every day.</p>
 
                 <div class="location-stats">
@@ -445,7 +445,7 @@
 
             <div
                 style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 32px; margin-top: 48px;">
-                <div class="feature-card glass-card reveal-premium"
+                <div class="feature-card"
                     style="text-align: center; padding: 32px; background: var(--mist); border-radius: 20px;">
                     <div style="font-size: 48px; margin-bottom: 16px;">🏭</div>
                     <h3 style="font-size: 20px; font-weight: 700; margin-bottom: 12px; color: var(--black);">Largest
@@ -453,7 +453,7 @@
                     <p style="color: var(--slate); line-height: 1.6;">Hundreds of garages and scrap yards across Streets
                         1 to 52, with parts for all makes.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium"
+                <div class="feature-card"
                     style="text-align: center; padding: 32px; background: var(--mist); border-radius: 20px;">
                     <div style="font-size: 48px; margin-bottom: 16px;">💰</div>
                     <h3 style="font-size: 20px; font-weight: 700; margin-bottom: 12px; color: var(--black);">Best Prices
@@ -461,7 +461,7 @@
                     <p style="color: var(--slate); line-height: 1.6;">Direct from Industrial Area suppliers. Competitive
                         bidding ensures bottom-line pricing.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium"
+                <div class="feature-card"
                     style="text-align: center; padding: 32px; background: var(--mist); border-radius: 20px;">
                     <div style="font-size: 48px; margin-bottom: 16px;">🚚</div>
                     <h3 style="font-size: 20px; font-weight: 700; margin-bottom: 12px; color: var(--black);">Fast
@@ -469,7 +469,7 @@
                     <p style="color: var(--slate); line-height: 1.6;">Same-day delivery from Street 1 dispatch hub to
                         anywhere in Doha.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium"
+                <div class="feature-card"
                     style="text-align: center; padding: 32px; background: var(--mist); border-radius: 20px;">
                     <div style="font-size: 48px; margin-bottom: 16px;">✅</div>
                     <h3 style="font-size: 20px; font-weight: 700; margin-bottom: 12px; color: var(--black);">Verified
