--- a/public/locations/salwa-road.html
+++ b/public/locations/salwa-road.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
-    <link rel="stylesheet" href="/css/vvip-premium.css">
+    
     <script
         type="application/ld+json">{"@context":"https://schema.org","@type":"AutoPartsStore","name":"QScrap - Salwa Road","description":"Find car parts on Salwa Road, Doha","address":{"@type":"PostalAddress","streetAddress":"Salwa Road","addressLocality":"Doha","addressCountry":"QA"},"telephone":"+974-5026-7974"}</script>
     <style>
@@ -263,14 +263,14 @@
     <section class="location-hero">
         <div class="container">
             <div class="location-content">
-                <div class="location-badge reveal-premium"><svg width="16" height="16" viewBox="0 0 24 24"
+                <div class="location-badge"><svg width="16" height="16" viewBox="0 0 24 24"
                         fill="currentColor">
                         <path
                             d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" />
                     </svg><span>Salwa Road Auto Parts</span></div>
-                <h1 class="location-title reveal-premium">Car Parts on<br><span style="color:#C9A227">Salwa Road</span>,
+                <h1 class="location-title">Car Parts on<br><span style="color:#C9A227">Salwa Road</span>,
                     Doha</h1>
-                <p class="location-subtitle reveal-premium">Connect with verified garages on Salwa Road, Al Aziziya, and
+                <p class="location-subtitle">Connect with verified garages on Salwa Road, Al Aziziya, and
                     Ain Khaled. Competitive bids, secure payments, and same-day delivery.</p>
                 <div class="location-stats">
                     <div class="location-stat">
@@ -298,25 +298,25 @@
                 <p class="section-subtitle">One of Doha's largest concentrations of auto parts suppliers</p>
             </div>
             <div class="features-grid">
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🏪</div>
                     <h3 class="feature-title">Many Suppliers</h3>
                     <p class="feature-desc">40+ verified garages and premium parts showrooms strategically located on
                         Salwa Road.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">💰</div>
                     <h3 class="feature-title">Competitive Pricing</h3>
                     <p class="feature-desc">High density of suppliers on Salwa Road ensures you get the most competitive
                         local bids.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">⚡</div>
                     <h3 class="feature-title">Fast Delivery</h3>
                     <p class="feature-desc">Same-day delivery to Salwa Road showrooms, Al Maamoura, and nearby
                         residential areas.</p>
                 </div>
-                <div class="feature-card glass-card reveal-premium">
+                <div class="feature-card">
                     <div class="feature-icon">🛡️</div>
                     <h3 class="feature-title">Quality Guarantee</h3>
                     <p class="feature-desc">Vetted suppliers offering certified parts with 7-day return policy for Salwa
