feat(premium): deploy unified premium nav & footer site-wide
- Extracted premium nav/footer styles from partners.html.
- Deployed premium-nav-footer.css to index.html and all location pages.
- Merged carousel-pause UX into main.css.
- Finalized VVIP cleanup (removed aesthetic classes).
- Updated minification for all assets.
- Production-ready sitemap and hreflang verified.

--- a/public/index.html
+++ b/public/index.html
@@ -431,6 +431,7 @@
     <!-- VVIP Widget Styles -->
     <link rel="stylesheet" href="/css/website.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/premium-nav-footer.css">
     
 
     <!-- Particle container styles -->
