--- a/public/locations/al-wakra.html
+++ b/public/locations/al-wakra.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
+    <link rel="stylesheet" href="/css/premium-nav-footer.css">
     
     <script
         type="application/ld+json">{"@context":"https://schema.org","@type":"AutoPartsStore","name":"QScrap - Al Wakra","description":"Find car parts in Al Wakra, Qatar","address":{"@type":"PostalAddress","addressLocality":"Al Wakra","addressCountry":"QA"},"telephone":"+974-5026-7974"}</script>
