--- a/public/locations/industrial-area.html
+++ b/public/locations/industrial-area.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
+    <link rel="stylesheet" href="/css/premium-nav-footer.css">
     
 
     <!-- Structured Data: LocalBusiness -->
