--- a/public/locations/salwa-road.html
+++ b/public/locations/salwa-road.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/css/design-tokens.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
+    <link rel="stylesheet" href="/css/premium-nav-footer.css">
     
     <script
         type="application/ld+json">{"@context":"https://schema.org","@type":"AutoPartsStore","name":"QScrap - Salwa Road","description":"Find car parts on Salwa Road, Doha","address":{"@type":"PostalAddress","streetAddress":"Salwa Road","addressLocality":"Doha","addressCountry":"QA"},"telephone":"+974-5026-7974"}</script>
