--- a/public/index.html
+++ b/public/index.html
@@ -432,7 +432,7 @@
     <link rel="stylesheet" href="/css/website.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/premium-nav-footer.css">
-    
+
 
     <!-- Particle container styles -->
     <style>
@@ -492,13 +492,13 @@
                     <span class="lang-text">AR</span>
                 </button>
             </div>
-            <a href="/request.html" class="nav-cta" style="background:var(--qatar-maroon);color:#fff;margin-right:8px">
+            <a href="/request.html" class="nav-cta">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                     <circle cx="12" cy="12" r="10" />
                     <line x1="12" y1="8" x2="12" y2="16" />
                     <line x1="8" y1="12" x2="16" y2="12" />
                 </svg>
-                <span>Request a Part</span>
+                <span data-i18n="nav.requestPart">Request a Part</span>
             </a>
             <a href="#download" class="nav-cta">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -556,7 +556,7 @@
                         <line x1="12" y1="8" x2="12" y2="16" />
                         <line x1="8" y1="12" x2="16" y2="12" />
                     </svg>
-                    <span>Request a Part</span>
+                    <span data-i18n="nav.requestPart">Request a Part</span>
                 </a>
                 <a href="#download" class="mobile-menu-cta" id="mobileDownloadBtn">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -1054,26 +1054,25 @@
                 <div>
                     <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
                     <ul class="footer-links">
-                        <li><a href="mailto:support@qscrap.qa" data-i18n="footer.email"><svg class="footer-contact-icon"
-                                    width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                        <li><a href="mailto:support@qscrap.qa"><svg class="footer-contact-icon" width="16" height="16"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round">
                                     <path
                                         d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                                     <polyline points="22,6 12,13 2,6" />
-                                </svg> support@qscrap.qa</a></li>
-                        <li><a href="tel:+97450267974" data-i18n="footer.phone"><svg class="footer-contact-icon"
+                                </svg> <span data-i18n="footer.email">support@qscrap.qa</span></a></li>
+                        <li><a href="tel:+97450267974"><svg class="footer-contact-icon" width="16" height="16"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                                </svg> <span data-i18n="footer.phone">+974 5026 7974</span></a></li>
+                        <li><a href="https://wa.me/97450267974" target="_blank"><svg class="footer-contact-icon"
                                     width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                                     <path
-                                        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-                                </svg> +974 5026 7974</a></li>
-                        <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp"><svg
-                                    class="footer-contact-icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round">
-                                    <path
                                         d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z" />
-                                </svg> WhatsApp Support</a></li>
+                                </svg> <span data-i18n="footer.whatsapp">WhatsApp Support</span></a></li>
                     </ul>
                 </div>
             </div>
