--- a/public/locations/al-khor.html
+++ b/public/locations/al-khor.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/website.css">
     <link rel="stylesheet" href="/css/premium-nav-footer.css">
-    
+
     <script
         type="application/ld+json">{"@context":"https://schema.org","@type":"AutoPartsStore","name":"QScrap - Al Khor","description":"Find car parts in Al Khor, North Qatar","address":{"@type":"PostalAddress","addressLocality":"Al Khor","addressCountry":"QA"},"telephone":"+974-5026-7974"}</script>
     <style>
@@ -238,34 +238,95 @@
 <body>
     <nav class="nav" id="mainNav">
         <div class="nav-container">
-            <a href="/" class="nav-logo"><img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo"></a>
+            <a href="/" class="nav-logo">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
+            </a>
             <div class="nav-links">
-                <a href="/#how-it-works" class="nav-link">How It Works</a>
-                <a href="/#gallery" class="nav-link">Gallery</a>
-                <a href="/partners.html" class="nav-link">For Businesses</a>
-                <a href="/about.html" class="nav-link">About</a>
+                <a href="/#how-it-works" class="nav-link" data-i18n="nav.howItWorks">How It Works</a>
+                <a href="/#gallery" class="nav-link" data-i18n="nav.gallery">Gallery</a>
+                <a href="/partners.html" class="nav-link" data-i18n="nav.forBusiness">For Businesses</a>
+                <a href="/about.html" class="nav-link" data-i18n="nav.about">About</a>
             </div>
             <div class="lang-switcher" id="langSwitcher">
-                <button class="lang-btn active" data-lang="en"><span class="lang-text">EN</span></button>
+                <button class="lang-btn active" data-lang="en" aria-label="English"><span
+                        class="lang-text">EN</span></button>
                 <span class="lang-divider">|</span>
-                <button class="lang-btn" data-lang="ar"><span class="lang-text">AR</span></button>
+                <button class="lang-btn" data-lang="ar" aria-label="العربية"><span class="lang-text">AR</span></button>
             </div>
-            <a href="/request.html" class="nav-cta" style="background:#8D1B3D;color:#fff;margin-right:8px">
+            <a href="/request.html" class="nav-cta">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                     <circle cx="12" cy="12" r="10" />
                     <line x1="12" y1="8" x2="12" y2="16" />
                     <line x1="8" y1="12" x2="16" y2="12" />
                 </svg>
-                <span>Request a Part</span>
+                <span data-i18n="nav.requestPart">Request a Part</span>
             </a>
+            <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Open menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </nav>
+
+    <!-- Mobile Menu Overlay - iOS Safari Safe -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay" aria-hidden="true">
+        <div class="mobile-menu-backdrop" id="mobileMenuBackdrop"></div>
+        <div class="mobile-menu-panel" id="mobileMenuPanel" role="dialog" aria-modal="true"
+            aria-label="Mobile navigation menu">
+            <div class="mobile-menu-header">
+                <a href="/" class="mobile-menu-logo">
+                    <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
+                </a>
+                <button class="mobile-menu-close" id="mobileMenuClose" aria-label="Close menu">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
+            </div>
+            <nav class="mobile-menu-nav">
+                <a href="/#how-it-works" class="mobile-menu-link" data-i18n="nav.howItWorks">How It Works</a>
+                <a href="/#gallery" class="mobile-menu-link" data-i18n="nav.gallery">Gallery</a>
+                <a href="/partners.html" class="mobile-menu-link" data-i18n="nav.forBusiness">For Businesses</a>
+                <a href="/about.html" class="mobile-menu-link" data-i18n="nav.about">About</a>
+            </nav>
+            <div class="mobile-menu-footer">
+                <!-- Language Switcher -->
+                <div class="mobile-lang-switcher">
+                    <button class="mobile-lang-btn active" data-lang="en" aria-label="English">
+                        <span class="lang-text">English</span>
+                    </button>
+                    <button class="mobile-lang-btn" data-lang="ar" aria-label="العربية">
+                        <span class="lang-text">العربية</span>
+                    </button>
+                </div>
+                <a href="/request.html" class="mobile-menu-cta"
+                    style="background:var(--qatar-maroon);color:#fff;margin-bottom:10px">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2.5">
+                        <circle cx="12" cy="12" r="10" />
+                        <line x1="12" y1="8" x2="12" y2="16" />
+                        <line x1="8" y1="12" x2="16" y2="12" />
+                    </svg>
+                    <span data-i18n="nav.requestPart">Request a Part</span>
+                </a>
+                <a href="/#download" class="mobile-menu-cta" id="mobileDownloadBtn">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg>
+                    <span data-i18n="nav.download">Download App</span>
+                </a>
+            </div>
+        </div>
+    </div>
 
     <section class="location-hero">
         <div class="container">
             <div class="location-content">
-                <div class="location-badge"><svg width="16" height="16" viewBox="0 0 24 24"
-                        fill="currentColor">
+                <div class="location-badge"><svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" />
                     </svg><span>North Qatar Auto Parts</span></div>
@@ -350,12 +411,60 @@
         </div>
     </section>
 
-    <footer class="footer"
-        style="background:linear-gradient(180deg,#0A0A0A 0%,#000000 100%);color:#FFFFFF;padding:60px 0">
-        <div class="container">
-            <div style="text-align:center">
-                <p style="color:rgba(255,255,255,0.6);font-size:14px">© 2026 QScrap Services & Trading L.L.C. All rights
-                    reserved.</p>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container footer-content">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="footer-logo" loading="lazy">
+                    <p class="footer-desc" data-i18n="footer.tagline">Qatar's premium automotive parts marketplace.
+                        Connecting customers with verified garages for quality new, used, and OEM parts.</p>
+                </div>
+                <div>
+                    <h4 class="footer-title" data-i18n="footer.company">Company</h4>
+                    <ul class="footer-links">
+                        <li><a href="/about.html" data-i18n="footer.aboutUs">About Us</a></li>
+                        <li><a href="/partners.html" data-i18n="footer.forBusiness">For Businesses</a></li>
+                        <li><a href="/about.html#contact" data-i18n="footer.contact">Contact</a></li>
+                        <li><a href="/#how-it-works" data-i18n="footer.howItWorks">How It Works</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="footer-title" data-i18n="footer.legal">Legal</h4>
+                    <ul class="footer-links">
+                        <li><a href="/privacy.html" data-i18n="footer.privacy">Privacy Policy</a></li>
+                        <li><a href="/terms.html" data-i18n="footer.terms">Terms of Service</a></li>
+                        <li><a href="/refund.html" data-i18n="footer.refund">Refund Policy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
+                    <ul class="footer-links">
+                        <li><a href="mailto:support@qscrap.qa"><svg class="footer-contact-icon" width="16" height="16"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
+                                    <polyline points="22,6 12,13 2,6" />
+                                </svg> <span data-i18n="footer.email">support@qscrap.qa</span></a></li>
+                        <li><a href="tel:+97450267974"><svg class="footer-contact-icon" width="16" height="16"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                                </svg> <span data-i18n="footer.phone">+974 5026 7974</span></a></li>
+                        <li><a href="https://wa.me/97450267974" target="_blank"><svg class="footer-contact-icon"
+                                    width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z" />
+                                </svg> <span data-i18n="footer.whatsapp">WhatsApp Chat</span></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p class="footer-legal" data-i18n="footer.legalInfo">QScrap Services & Trading L.L.C | Doha, Qatar</p>
+                <p class="footer-copyright" data-i18n="footer.copyright">© 2026 QScrap. All rights reserved.</p>
             </div>
         </div>
     </footer>
