--- a/public/privacy.html
+++ b/public/privacy.html
@@ -356,13 +356,16 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p data-i18n="footer.copyright">© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
-        <p style="margin-top: 8px;" data-i18n="footer.compliance">Compliant with Google Play Developer Program Policies
-            and Qatar's Personal Data
-            Protection Law.</p>
-        <p style="margin-top: 12px;"><a href="/" data-i18n="footer.backHome">Back to QScrap Home</a> • <a
-                href="/terms.html" data-i18n="footer.terms">Terms of Service</a>
-        </p>
+        <div class="container">
+            <p data-i18n="footer.copyright">© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
+            <p style="margin: 8px 0;" data-i18n="footer.compliance">Compliant with Google Play Developer Program
+                Policies and Qatar's Personal Data Protection Law.</p>
+            <p style="margin-top: 16px;">
+                <a href="/" data-i18n="footer.backHome">Back to Home</a> •
+                <a href="/terms.html" data-i18n="footer.terms">Terms of Service</a> •
+                <a href="/refund.html" data-i18n="footer.refund">Refund Policy</a>
+            </p>
+        </div>
     </footer>
 
     <!-- i18n System -->
