--- a/public/request.html
+++ b/public/request.html
@@ -43,7 +43,7 @@
     <nav class="nav" id="mainNav">
         <div class="nav-container">
             <a href="/" class="nav-logo">
-                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo" id="navLogo">
+                <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
             </a>
             <div class="nav-links">
                 <a href="/#how-it-works" class="nav-link" data-i18n="nav.howItWorks">How It Works</a>
@@ -58,8 +58,7 @@
                 <span class="lang-divider">|</span>
                 <button class="lang-btn" data-lang="ar" aria-label="العربية"><span class="lang-text">AR</span></button>
             </div>
-            <!-- Request CTA in nav -->
-            <a href="/request.html" class="nav-cta" style="background:var(--qatar-maroon);color:#fff;">
+            <a href="/request.html" class="nav-cta active">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                     <circle cx="12" cy="12" r="10" />
                     <line x1="12" y1="8" x2="12" y2="16" />
@@ -73,18 +72,19 @@
         </div>
     </nav>
 
-    <!-- ╔══════════════ MOBILE MENU (identical to index.html) ══════════════╗ -->
+    <!-- Mobile Menu Overlay -->
     <div class="mobile-menu-overlay" id="mobileMenuOverlay" aria-hidden="true">
         <div class="mobile-menu-backdrop" id="mobileMenuBackdrop"></div>
         <div class="mobile-menu-panel" id="mobileMenuPanel" role="dialog" aria-modal="true"
             aria-label="Mobile navigation menu">
             <div class="mobile-menu-header">
-                <a href="/" class="mobile-menu-logo"><img src="/assets/images/qscrap-logo.png?v=2026"
-                        alt="QScrap Logo"></a>
+                <a href="/" class="mobile-menu-logo">
+                    <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap Logo">
+                </a>
                 <button class="mobile-menu-close" id="mobileMenuClose" aria-label="Close menu">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <line x1="18" y1="6" x2="6" y2="18" />
-                        <line x1="6" y1="6" x2="18" y2="18" />
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
                     </svg>
                 </button>
             </div>
@@ -95,17 +95,32 @@
                 <a href="/about.html" class="mobile-menu-link" data-i18n="nav.about">About</a>
             </nav>
             <div class="mobile-menu-footer">
+                <!-- Language Switcher -->
                 <div class="mobile-lang-switcher">
-                    <button class="mobile-lang-btn active" data-lang="en">English</button>
-                    <button class="mobile-lang-btn" data-lang="ar">العربية</button>
+                    <button class="mobile-lang-btn active" data-lang="en" aria-label="English">
+                        <span class="lang-text">English</span>
+                    </button>
+                    <button class="mobile-lang-btn" data-lang="ar" aria-label="العربية">
+                        <span class="lang-text">العربية</span>
+                    </button>
                 </div>
-                <a href="/request.html" class="mobile-menu-cta">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <a href="/request.html" class="mobile-menu-cta active"
+                    style="background:var(--qatar-maroon);color:#fff;margin-bottom:10px">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2.5">
                         <circle cx="12" cy="12" r="10" />
                         <line x1="12" y1="8" x2="12" y2="16" />
                         <line x1="8" y1="12" x2="16" y2="12" />
                     </svg>
                     <span data-i18n="nav.requestPart">Request a Part</span>
+                </a>
+                <a href="/#download" class="mobile-menu-cta" id="mobileDownloadBtn">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg>
+                    <span data-i18n="nav.download">Download App</span>
                 </a>
             </div>
         </div>
