revert: rollback public website to Feb 26 state

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -11,7 +11,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/privacy">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/privacy">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/privacy?lang=ar">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/privacy">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/privacy">
 
     <!-- Fonts -->
@@ -356,16 +356,13 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <p data-i18n="footer.copyright">© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
-            <p style="margin: 8px 0;" data-i18n="footer.compliance">Compliant with Google Play Developer Program
-                Policies and Qatar's Personal Data Protection Law.</p>
-            <p style="margin-top: 16px;">
-                <a href="/" data-i18n="footer.backHome">Back to Home</a> •
-                <a href="/terms.html" data-i18n="footer.terms">Terms of Service</a> •
-                <a href="/refund.html" data-i18n="footer.refund">Refund Policy</a>
-            </p>
-        </div>
+        <p data-i18n="footer.copyright">© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
+        <p style="margin-top: 8px;" data-i18n="footer.compliance">Compliant with Google Play Developer Program Policies
+            and Qatar's Personal Data
+            Protection Law.</p>
+        <p style="margin-top: 12px;"><a href="/" data-i18n="footer.backHome">Back to QScrap Home</a> • <a
+                href="/terms.html" data-i18n="footer.terms">Terms of Service</a>
+        </p>
     </footer>
 
     <!-- i18n System -->
