--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/?lang=ar">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/">
 
     <!-- Favicon & Touch Icons -->
@@ -431,8 +431,6 @@
     <!-- VVIP Widget Styles -->
     <link rel="stylesheet" href="/css/website.css">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/premium-nav-footer.css">
-
 
     <!-- Particle container styles -->
     <style>
@@ -492,13 +490,13 @@
                     <span class="lang-text">AR</span>
                 </button>
             </div>
-            <a href="/request.html" class="nav-cta">
+            <a href="/request.html" class="nav-cta" style="background:var(--qatar-maroon);color:#fff;margin-right:8px">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                     <circle cx="12" cy="12" r="10" />
                     <line x1="12" y1="8" x2="12" y2="16" />
                     <line x1="8" y1="12" x2="16" y2="12" />
                 </svg>
-                <span data-i18n="nav.requestPart">Request a Part</span>
+                <span>Request a Part</span>
             </a>
             <a href="#download" class="nav-cta">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -556,7 +554,7 @@
                         <line x1="12" y1="8" x2="12" y2="16" />
                         <line x1="8" y1="12" x2="16" y2="12" />
                     </svg>
-                    <span data-i18n="nav.requestPart">Request a Part</span>
+                    <span>Request a Part</span>
                 </a>
                 <a href="#download" class="mobile-menu-cta" id="mobileDownloadBtn">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -774,7 +772,7 @@
                 <p class="section-subtitle" data-i18n="steps.subtitle">Get the parts you need in 4 easy steps</p>
             </div>
             <div class="steps-grid">
-                <div class="step-card">
+                <div class="step-card reveal">
                     <div class="step-icon">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -787,7 +785,7 @@
                     <p class="step-desc" data-i18n="step1.desc">Describe the part you need. Add photos and your car
                         details for accuracy.</p>
                 </div>
-                <div class="step-card">
+                <div class="step-card reveal">
                     <div class="step-icon">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -799,7 +797,7 @@
                     <p class="step-desc" data-i18n="step2.desc">Receive competitive quotes from verified garages within
                         hours.</p>
                 </div>
-                <div class="step-card">
+                <div class="step-card reveal">
                     <div class="step-icon">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -812,7 +810,7 @@
                     <p class="step-desc" data-i18n="step3.desc">Choose card payment or Cash on Delivery. Your money is
                         protected.</p>
                 </div>
-                <div class="step-card">
+                <div class="step-card reveal">
                     <div class="step-icon">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -840,23 +838,23 @@
                 <p class="section-subtitle" data-i18n="gallery.subtitle">Quality parts from verified sources</p>
             </div>
             <div class="gallery-grid">
-                <div class="gallery-item large">
+                <div class="gallery-item large reveal-left">
                     <img src="/assets/images/parts/wp3195881-cars-engine-parts-wallpaper.jpg"
                         alt="Car Parts Exploded View" loading="lazy">
                     <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item1">Complete
                             Vehicle Components</span>
                     </div>
                 </div>
-                <div class="gallery-item">
+                <div class="gallery-item reveal">
                     <img src="/assets/images/parts/wp8391672-auto-parts-wallpapers.jpg" alt="Engine Parts"
                         loading="lazy">
                     <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item2">Engine
                             Internals</span></div>
                 </div>
-                <div class="gallery-item">
+                <div class="gallery-item reveal-right">
                     <img src="/assets/images/parts/connect-part-to-people-8.jpg" alt="Parts Warehouse" loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item3">Global
-                            Sourcing</span></div>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item3">Expert
+                            Selection</span></div>
                 </div>
                 <div class="gallery-item wide reveal">
                     <img src="/assets/images/parts/connect-part-to-people-10.jpg" alt="Garage Workshop" loading="lazy">
@@ -865,11 +863,12 @@
                             Workshop</span>
                     </div>
                 </div>
-                <div class="gallery-item">
+                <div class="gallery-item reveal-left">
                     <img src="/assets/images/parts/wp8391878-auto-parts-wallpapers.jpg" alt="Scrap Yard Porsche"
                         loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item5">Quality
-                            Used Parts</span></div>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item5">Luxury
+                            Parts Available</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1030,9 +1029,13 @@
         <div class="container footer-content">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="footer-logo" loading="lazy">
-                    <p class="footer-desc">Qatar's leading automotive parts marketplace. Connecting buyers with
-                        verified suppliers across Doha.</p>
+                    <a href="/" class="nav-logo" style="margin-bottom: 16px;">
+                        <img src="/assets/images/qscrap-logo.png?v=2026" alt="QScrap"
+                            style="filter: brightness(0) invert(1);">
+                    </a>
+                    <p data-i18n="footer.tagline">Qatar's premium automotive parts marketplace. Connecting customers
+                        with verified garages for
+                        quality new, used, and OEM parts.</p>
                 </div>
                 <div>
                     <h4 class="footer-title" data-i18n="footer.company">Company</h4>
@@ -1054,25 +1057,26 @@
                 <div>
                     <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
                     <ul class="footer-links">
-                        <li><a href="mailto:support@qscrap.qa"><svg class="footer-contact-icon" width="16" height="16"
-                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
-                                    stroke-linecap="round" stroke-linejoin="round">
-                                    <path
-                                        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
-                                    <polyline points="22,6 12,13 2,6" />
-                                </svg> <span data-i18n="footer.email">support@qscrap.qa</span></a></li>
-                        <li><a href="tel:+97450267974"><svg class="footer-contact-icon" width="16" height="16"
-                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
-                                    stroke-linecap="round" stroke-linejoin="round">
-                                    <path
-                                        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-                                </svg> <span data-i18n="footer.phone">+974 5026 7974</span></a></li>
-                        <li><a href="https://wa.me/97450267974" target="_blank"><svg class="footer-contact-icon"
+                        <li><a href="mailto:support@qscrap.qa" data-i18n="footer.email"><svg class="footer-contact-icon"
                                     width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                                     <path
+                                        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
+                                    <polyline points="22,6 12,13 2,6" />
+                                </svg> support@qscrap.qa</a></li>
+                        <li><a href="tel:+97450267974" data-i18n="footer.phone"><svg class="footer-contact-icon"
+                                    width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                                </svg> +974 5026 7974</a></li>
+                        <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp"><svg
+                                    class="footer-contact-icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path
                                         d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z" />
-                                </svg> <span data-i18n="footer.whatsapp">WhatsApp Support</span></a></li>
+                                </svg> WhatsApp Support</a></li>
                     </ul>
                 </div>
             </div>
