--- a/public/terms.html
+++ b/public/terms.html
@@ -11,7 +11,7 @@
     <!-- Canonical & Language -->
     <link rel="canonical" href="https://www.qscrap.qa/terms">
     <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/terms">
-    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/terms?lang=ar">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/terms">
     <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/terms">
 
     <!-- Fonts -->
@@ -315,16 +315,11 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <p data-i18n="footer.copyright">© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
-            <p style="margin: 8px 0;" data-i18n="footer.compliance">Compliant with Qatar's Ministry of Commerce and
-                Industry regulations.</p>
-            <p style="margin-top: 16px;">
-                <a href="/" data-i18n="footer.backHome">Back to Home</a> •
-                <a href="/privacy.html" data-i18n="footer.privacy">Privacy Policy</a> •
-                <a href="/terms.html" data-i18n="footer.terms">Terms of Service</a>
-            </p>
-        </div>
+        <p data-i18n="footer.copyright">© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
+        <p style="margin-top: 8px;">
+            <a href="/privacy.html" data-i18n="footer.privacy">Privacy Policy</a> ·
+            <a href="/terms.html" data-i18n="footer.terms">Terms of Service</a>
+        </p>
     </footer>
 
     <!-- i18n System -->
