feat: implement CSS minification and premium 404 page

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
+    <!-- Core Stylesheets (Minified for Production) -->
+    <link rel="stylesheet" href="/css/design-tokens.min.css">
+    <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/css/website.min.css">
+
     <!-- ============================================ -->
     <!-- STRUCTURED DATA: Organization + LocalBusiness -->
     <!-- ============================================ -->
@@ -427,10 +432,6 @@
         ]
     }
     </script>
-
-    <!-- VVIP Widget Styles -->
-    <link rel="stylesheet" href="/css/website.css">
-    <link rel="stylesheet" href="/css/main.css">
 
     <!-- Particle container styles -->
     <style>
